# gradescope-autograder-gh-results-importer

./: .gitignore  LICENSE  README.md  notes.md
gradescope/: config.json  grader.py  helpers.py  lateness.py  make_zip.sh  questions.py  repo_checks.py  results.py  run_autograder  setup.sh
gradescope/_template/: CHECKLIST.md  config.json
gradescope/_template/rust_template/: Cargo.toml
gradescope/_template/rust_template/src/: main.rs
gradescope/_template/rust_template/src/q1/: mod.rs  tests.rs
gradescope/hw5/rust_template/: Cargo.toml
gradescope/hw5/rust_template/src/: main.rs
gradescope/hw5/rust_template/src/q1/: mod.rs  tests.rs
gradescope/hw6/rust_template/: Cargo.toml
gradescope/rust_template/: Cargo.toml
gradescope/rust_template/src/: main.rs
gradescope/rust_template/src/q1/: mod.rs  tests.rs
gradescope/rust_template/src/q2/: mod.rs  tests.rs
gradescope/rust_template/src/q3/: mod.rs  tests.rs
rust-autograder-setup-1.3.1/: .gitignore  Cargo.toml  LICENSE  README.md
rust-autograder-setup-1.3.1/.github/workflows/: ci.yaml  release.yaml
rust-autograder-setup-1.3.1/src/: main.rs  types.rs
rust-autograder-setup-1.3.1/src/cli/: mod.rs
rust-autograder-setup-1.3.1/src/cli/init/: mod.rs  tests.rs
rust-autograder-setup-1.3.1/src/cli/reset/: mod.rs  tests.rs
rust-autograder-setup-1.3.1/src/cli/table/: mod.rs
rust-autograder-setup-1.3.1/src/utils/: mod.rs  tests.rs
