[package]
name = "autograder-setup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cli-clipboard = "0.4.0"
markdown-tables = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", features = ["full", "visit", "parsing"] }

[dev-dependencies]
tempfile = "3"
